--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
         </div>
 
         <div class="col">
-            <button id="ostrava" class="btn-no-style" data-bs-toggle="modal" data-bs-target="#OtherCitiesModal">
+            <button id="ostrava" class="btn-no-style" data-bs-toggle="modal" data-bs-target="#OstravaModal">
                 <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg" style="background-image: url('static/images/services/ostrava.webp');">
                     <div class="d-flex flex-column h-100 p-5 mt-5 pb-3 text-shadow-1">
                         <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold text-start">Ostrava</h2>
@@ -669,7 +669,7 @@
             <div class="row row-cols-1 align-items-stretch pb-3 px-4 g-2">
                 <div class="d-flex gap-2 flex-column modal-title text-muted wh-100 px-3 small">
                     <span>
-                        **Ceník je platný od 13.10.2023
+                        **Ceník je platný od 2.5.2025
                     </span>
                     <span>
                         **Pravidla pro lekce všeho druhu:
@@ -706,7 +706,139 @@
                             <div class="d-flex flex-column h-50 p-5 pb-4 text-white text-shadow-1">
                                 <div class="d-flex justify-content-between flex-wrap align-items-center">
                                     <p class="mb-3 display-6 lh-1 fw-bold pr-2">Individuální lekce</p>
-                                    <p class="mb-3 display-cust lh-1 fw-bold">699 Kč/hod</p>
+                                    <p class="mb-3 display-cust lh-1 fw-bold">799 Kč/hod</p>
+                                </div>
+                                <ul class="d-flex list-unstyled mt-auto">
+                                    <li class="d-flex align-items-center me-3">
+                                        <small>
+                                            Nebaví tě “kroužit odezdi ke zdi”? Nabízíme Ti smysluplný trénink tak,
+                                            že jsi pod drobnohledem profesionála a víš, že jsi na tréninku, který je
+                                            nastaven tak, aby vedl ke zlepšení tvých cílů.
+                                        </small>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg">
+                            <div class="d-flex flex-column h-50 p-5 pb-4 text-white text-shadow-1">
+                                <div class="d-flex justify-content-between flex-wrap align-items-center">
+                                    <p class="mb-4 display-6 lh-1 fw-bold">Lekce pro dvojice</p>
+                                    <p class="mb-4 display-cust lh-1 fw-bold">899 Kč/hod</p>
+                                </div>
+                                <ul class="d-flex list-unstyled mt-auto">
+                                    <li class="d-flex align-items-center me-3">
+                                        <small>
+                                            Nerad chodíš sportovat sám? Raději jdeš s přítelkyní, kolegou z práce,
+                                            bráchou, ségrou a nebo babičkou? Tak v tom případě neváhej, vem toho, s kým
+                                            normálně chodíš a plav.
+                                        </small>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg">
+                            <div class="d-flex flex-column h-50 p-5 pb-4 text-white text-shadow-1">
+                                <div class="d-flex justify-content-between flex-wrap align-items-center">
+                                    <p class="mb-4 display-6 lh-1 fw-bold">Skupinové lekce</p>
+                                    <p class="mb-4 display-cust lh-1 fw-bold">Od 999 Kč/hod</p>
+                                </div>
+                                <ul class="d-flex list-unstyled mt-auto">
+                                    <li class="d-flex align-items-center me-3">
+                                        <small>
+                                            Lekce, kdy se sejdou ti, kteří výkonnostně zapadají k sobě a
+                                            nebo právě ti, kteří chodí plavat jako parta.
+                                        </small>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg">
+                            <div class="d-flex flex-column h-50 p-5 pb-4 text-white text-shadow-1">
+                                <div class="d-flex justify-content-between flex-wrap align-items-center">
+                                    <p class="mb-3 display-6 lh-1 fw-bold pr-2">Lekce pro (ne)plavce</p>
+                                    <p class="mb-3 display-cust lh-1 fw-bold">899 Kč/hod</p>
+                                </div>
+                                <ul class="d-flex list-unstyled mt-auto">
+                                    <li class="d-flex align-items-center me-3">
+                                        <small>
+                                            Pokud se máš v plánu naučit plavat v pozdějším věku a nebo chceš někoho,
+                                            kdo se bude tvým dětem věnovat víc, než trenér co má v kroužku 20 dětí, tak napiš.
+                                        </small>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card card-cover h-90 overflow-hidden text-white bg-green rounded-5 shadow-lg">
+                            <div class="d-flex flex-column h-50 p-5 pb-4 text-white text-shadow-1">
+                                <div class="d-flex justify-content-between flex-wrap align-items-center">
+                                    <p class="mb-4 display-6 lh-1 fw-bold">Rozbor techniky</p>
+                                    <p class="mb-4 display-cust lh-1 fw-bold">2499 Kč</p>
+                                </div>
+                                <ul class="d-flex list-unstyled mt-auto">
+                                    <li class="d-flex align-items-center me-3 text-justify long-text">
+                                        <small>
+                                            Techniku videí z Youtube máš zmáklou ale ve vodě to stále není ono?
+                                            Myslíš si, že pohyby ve vodě opakuješ jak ve videu ale očekávaný progress nikde?
+                                            Tak tady pro tebe něco mám -  Videoanalýza plaveckého způsobu s následnou korekcí techniky.
+                                            Při využití této služby ti poskytnu video záznam tvého plavání,
+                                            který společně projdeme jak teoreticky, tak prakticky.
+                                        </small>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row row-cols-1 align-items-stretch pb-3 px-4 g-2">
+                <div class="d-flex gap-2 flex-column modal-title text-muted wh-100 px-3 small">
+                    <span>
+                        **Ceník je platný od 02.05.2025
+                    </span>
+                    <span>
+                        **Pravidla pro lekce všeho druhu:
+                    </span>
+                    <ul>
+                        <li>
+                            Objednanou lekci lze zrušit nejpozději do 24 hodin před lekcí.
+                        </li>
+                        <li>
+                            V případě, že klient zruší trénink v den jeho konání
+                            uhradí klient storno poplatek v plné výši ceny lekce
+                        </li>
+                        <li>
+                            V případě, že je zrušení tréninku v daný den na naší straně,
+                            má klient příští trénink zdarma.
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="OstravaModal" tabindex="-1" aria-labelledby="OstravaModal" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+        <div class="modal-content px-2">
+            <div class="modal-header text-center">
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="row row-cols-1 align-items-stretch pb-3">
+                    <div class="col">
+                        <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg">
+                            <div class="d-flex flex-column h-50 p-5 pb-4 text-white text-shadow-1">
+                                <div class="d-flex justify-content-between flex-wrap align-items-center">
+                                    <p class="mb-3 display-6 lh-1 fw-bold pr-2">Individuální lekce</p>
+                                    <p class="mb-3 display-cust lh-1 fw-bold">749 Kč/hod</p>
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3">
@@ -801,7 +933,7 @@
             <div class="row row-cols-1 align-items-stretch pb-3 px-4 g-2">
                 <div class="d-flex gap-2 flex-column modal-title text-muted wh-100 px-3 small">
                     <span>
-                        **Ceník je platný od 01.02.2023
+                        **Ceník je platný od 02.05.2025
                     </span>
                     <span>
                         **Pravidla pro lekce všeho druhu:
@@ -933,7 +1065,7 @@
             <div class="row row-cols-1 align-items-stretch pb-3 px-4 g-2">
                 <div class="d-flex gap-2 flex-column modal-title text-muted wh-100 px-3 small">
                     <span>
-                        **Ceník je platný od 01.02.2023
+                        **Ceník je platný od 02.05.2025
                     </span>
                     <span>
                         **Pravidla pro lekce všeho druhu:
@@ -990,7 +1122,7 @@
             <div class="row row-cols-1 align-items-stretch pb-3 px-4 g-2">
                 <div class="d-flex gap-2 flex-column modal-title text-muted wh-100 px-3 small">
                     <span>
-                        **Ceník je platný od 01.02.2023
+                        **Ceník je platný od 02.05.2025
                     </span>
                     <span>
                         **Pravidla pro lekce všeho druhu:
