--- a/index_en.html
+++ b/index_en.html
@@ -241,7 +241,7 @@
         </div>
 
         <div class="col">
-            <button id="ostrava" class="btn-no-style" data-bs-toggle="modal" data-bs-target="#OtherCitiesModal">
+            <button id="ostrava" class="btn-no-style" data-bs-toggle="modal" data-bs-target="#OstravaModal">
                 <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg" style="background-image: url('static/images/services/ostrava.webp');">
                     <div class="d-flex flex-column h-100 p-5 mt-5 pb-3 text-shadow-1">
                         <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold text-start">Ostrava</h2>
@@ -662,7 +662,7 @@ If you plan to learn to swim at a later age, or want someone who will be more de
             <div class="row row-cols-1 align-items-stretch pb-3 px-4 g-2">
                 <div class="d-flex gap-2 flex-column modal-title text-muted wh-100 px-3 small">
                     <span>
-                        **Price list is valid from 13.10.2023
+                        **Prices are valid from 02.05.2025
                     </span>
                     <span>
                         **Rules for lessons of all kinds:
@@ -697,7 +697,7 @@ If the cancellation of the training on a given day is on our side, the client ha
                             <div class="d-flex flex-column h-50 p-5 pb-4 text-white text-shadow-1">
                                 <div class="d-flex justify-content-between flex-wrap align-items-center">
                                     <p class="mb-3 display-6 lh-1 fw-bold pr-2">Individual lessons</p>
-                                    <p class="mb-3 display-cust lh-1 fw-bold">699 Kč/hour</p>
+                                    <p class="mb-3 display-cust lh-1 fw-bold">799 Kč/hour</p>
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3">
@@ -714,7 +714,7 @@ If the cancellation of the training on a given day is on our side, the client ha
                             <div class="d-flex flex-column h-50 p-5 pb-4 text-white text-shadow-1">
                                 <div class="d-flex justify-content-between flex-wrap align-items-center">
                                     <p class="mb-4 display-6 lh-1 fw-bold">Lessons for pairs</p>
-                                    <p class="mb-4 display-cust lh-1 fw-bold">799 Kč/hour</p>
+                                    <p class="mb-4 display-cust lh-1 fw-bold">899 Kč/hour</p>
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3">
@@ -733,7 +733,7 @@ If the cancellation of the training on a given day is on our side, the client ha
                             <div class="d-flex flex-column h-50 p-5 pb-4 text-white text-shadow-1">
                                 <div class="d-flex justify-content-between flex-wrap align-items-center">
                                     <p class="mb-4 display-6 lh-1 fw-bold">Group lessons</p>
-                                    <p class="mb-4 display-cust lh-1 fw-bold">From 899 Kč/hour</p>
+                                    <p class="mb-4 display-cust lh-1 fw-bold">From 999 Kč/hour</p>
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3">
@@ -750,7 +750,7 @@ If the cancellation of the training on a given day is on our side, the client ha
                             <div class="d-flex flex-column h-50 p-5 pb-4 text-white text-shadow-1">
                                 <div class="d-flex justify-content-between flex-wrap align-items-center">
                                     <p class="mb-3 display-6 lh-1 fw-bold pr-2">Lessons for nonswimmers</p>
-                                    <p class="mb-3 display-cust lh-1 fw-bold">799 Kč/hour</p>
+                                    <p class="mb-3 display-cust lh-1 fw-bold">899 Kč/hour</p>
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3">
@@ -789,7 +789,7 @@ If the cancellation of the training on a given day is on our side, the client ha
             <div class="row row-cols-1 align-items-stretch pb-3 px-4 g-2">
                 <div class="d-flex gap-2 flex-column modal-title text-muted wh-100 px-3 small">
                     <span>
-                        **Price list is valid from 01.02.2023
+                        **Prices are valid from 02.05.2025
                     </span>
                     <span>
                         **Rules for lessons of all kinds:
@@ -921,7 +921,139 @@ If the cancellation of the training on a given day is on our side, the client ha
             <div class="row row-cols-1 align-items-stretch pb-3 px-4 g-2">
                 <div class="d-flex gap-2 flex-column modal-title text-muted wh-100 px-3 small">
                     <span>
-                        **Price list is valid from 01.02.2023
+                        **Prices are valid from 02.05.2025
+                    </span>
+                    <span>
+                        **Rules for lessons of all kinds:
+                    </span>
+                    <ul>
+                        <li>
+                            A lesson can be cancelled up to 24 hours before the lesson.
+                        </li>
+                        <li>
+If the client cancels the training on the day of the training the client will pay a cancellation fee equal to the full price of the lesson
+                        </li>
+                        <li>
+If the cancellation of the training on a given day is on our side, the client has the next training free of charge.
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="OstravaModal" tabindex="-1" aria-labelledby="OstravaModal" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+        <div class="modal-content px-2">
+            <div class="modal-header text-center">
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="row row-cols-1 align-items-stretch pb-3">
+                    <div class="col">
+                        <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg">
+                            <div class="d-flex flex-column h-50 p-5 pb-4 text-white text-shadow-1">
+                                <div class="d-flex justify-content-between flex-wrap align-items-center">
+                                    <p class="mb-3 display-6 lh-1 fw-bold pr-2">Individual lessons</p>
+                                    <p class="mb-3 display-cust lh-1 fw-bold">749 Kč/hour</p>
+                                </div>
+                                <ul class="d-flex list-unstyled mt-auto">
+                                    <li class="d-flex align-items-center me-3">
+                                        <small>
+                                            Are you tired of "circling the wall"? We offer you meaningful
+                                            training so that you're under the watchful eye of a professional
+                                            and know you're in a workout that's set up to lead to improvement in your goals.
+                                        </small>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg">
+                            <div class="d-flex flex-column h-50 p-5 pb-4 text-white text-shadow-1">
+                                <div class="d-flex justify-content-between flex-wrap align-items-center">
+                                    <p class="mb-4 display-6 lh-1 fw-bold">Lessons for pairs</p>
+                                    <p class="mb-4 display-cust lh-1 fw-bold">799 Kč/hour</p>
+                                </div>
+                                <ul class="d-flex list-unstyled mt-auto">
+                                    <li class="d-flex align-items-center me-3">
+                                        <small>
+                                            Don't you like to do sports alone? Do you prefer to go with your girlfriend,
+                                            colleague, brother, sister or grandmother? Then don't hesitate, take whoever
+                                            you normally go with and swim.
+                                        </small>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg">
+                            <div class="d-flex flex-column h-50 p-5 pb-4 text-white text-shadow-1">
+                                <div class="d-flex justify-content-between flex-wrap align-items-center">
+                                    <p class="mb-4 display-6 lh-1 fw-bold">Group lessons</p>
+                                    <p class="mb-4 display-cust lh-1 fw-bold">From 899 Kč/hour</p>
+                                </div>
+                                <ul class="d-flex list-unstyled mt-auto">
+                                    <li class="d-flex align-items-center me-3">
+                                        <small>
+                                            Lessons when those who fit together in terms of performance
+                                            or those who swim as a group come together.
+                                        </small>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg">
+                            <div class="d-flex flex-column h-50 p-5 pb-4 text-white text-shadow-1">
+                                <div class="d-flex justify-content-between flex-wrap align-items-center">
+                                    <p class="mb-3 display-6 lh-1 fw-bold pr-2">Lessons for nonswimmers</p>
+                                    <p class="mb-3 display-cust lh-1 fw-bold">799 Kč/hour</p>
+                                </div>
+                                <ul class="d-flex list-unstyled mt-auto">
+                                    <li class="d-flex align-items-center me-3">
+                                        <small>
+                                            If you plan to learn to swim at a later age, or want someone
+                                            who will be more dedicated to your kids than a coach who has
+                                            20 kids in a club, drop me a line.
+                                        </small>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card card-cover h-90 overflow-hidden text-white bg-green rounded-5 shadow-lg">
+                            <div class="d-flex flex-column h-50 p-5 pb-4 text-white text-shadow-1">
+                                <div class="d-flex justify-content-between flex-wrap align-items-center">
+                                    <p class="mb-4 display-6 lh-1 fw-bold">Analysis of the technique</p>
+                                    <p class="mb-4 display-cust lh-1 fw-bold">2499 Kč</p>
+                                </div>
+                                <ul class="d-flex list-unstyled mt-auto">
+                                    <li class="d-flex align-items-center me-3 text-justify long-text">
+                                        <small>
+                                            You've mastered the technique of YouTube videos but it's still not the same in the water?
+                                            Do you think you repeat the movements in the water as in the video but the expected
+                                            progress is nowhere? Well, here's something for you - Video analysis of the swimming
+                                            method with subsequent correction of the technique. Using this service, I will provide
+                                            you with a video recording of your swimming, which we will go through together both
+                                            theoretically and practically.
+                                        </small>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row row-cols-1 align-items-stretch pb-3 px-4 g-2">
+                <div class="d-flex gap-2 flex-column modal-title text-muted wh-100 px-3 small">
+                    <span>
+                        **Prices are valid from 02.05.2025
                     </span>
                     <span>
                         **Rules for lessons of all kinds:
@@ -976,7 +1108,7 @@ If the cancellation of the training on a given day is on our side, the client ha
             <div class="row row-cols-1 align-items-stretch pb-3 px-4 g-2">
                 <div class="d-flex gap-2 flex-column modal-title text-muted wh-100 px-3 small">
                     <span>
-                        **Price list is valid from 01.02.2023
+                        **Prices are valid from 02.05.2025
                     </span>
                     <span>
                         **Rules for lessons of all kinds:
