Replace Krnov for Mladá Boleslav

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <!-- Required meta tags -->
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=5.0">
-    <title>Trenér plavání Praha, Brno, Ostrava, Olomouc, Krnov a Online | ES</title>
-    <meta content="Plavecký trénink pod dohledem vysokoškolsky vzdělaných profesionálů s několikaletou praxí v oboru - Praha, Brno, Ostrava, Olomouc, Krnov nebo Online"
+    <title>Trenér plavání Praha, Brno, Ostrava, Olomouc, Mladá Boleslav a Online | ES</title>
+    <meta content="Plavecký trénink pod dohledem vysokoškolsky vzdělaných profesionálů s několikaletou praxí v oboru - Praha, Brno, Ostrava, Olomouc, Mladá Boleslav nebo Online"
           name="description">
 
     <meta property="og:locale" content="cs_CZ">
-    <meta property="og:title" content="Trenér plavání Praha, Brno, Ostrava, Olomouc, Krnov a Online">
+    <meta property="og:title" content="Trenér plavání Praha, Brno, Ostrava, Olomouc, Mladá Boleslav a Online">
     <meta property="og:description"
-          content="Plavecký trénink pod dohledem vysokoškolsky vzdělaných profesionálů s několikaletou praxí v oboru - Praha, Brno, Ostrava, Olomouc, Krnov nebo Online">
+          content="Plavecký trénink pod dohledem vysokoškolsky vzdělaných profesionálů s několikaletou praxí v oboru - Praha, Brno, Ostrava, Olomouc, Mladá Boleslav nebo Online">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.elementswimming.cz/">
     <meta property="og:site_name" content="Element swimming">
@@ -23,7 +23,7 @@
     <meta name="twitter:site" content="@elementswimming">
     <meta name="twitter:title" content="Element swimming">
     <meta name="twitter:description"
-          content="Plavecký trénink pod dohledem vysokoškolsky vzdělaných profesionálů s několikaletou praxí v oboru - Praha, Brno, Ostrava, Olomouc, Krnov nebo Online">
+          content="Plavecký trénink pod dohledem vysokoškolsky vzdělaných profesionálů s několikaletou praxí v oboru - Praha, Brno, Ostrava, Olomouc, Mladá Boleslav nebo Online">
     <meta name="twitter:image" content="https://www.elementswimming.cz/static/images/home_photo.webp">
 
     <link rel="icon" href="static/images/icons/logo_icon.png">
@@ -97,7 +97,7 @@
     <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center">
         <div class="col-lg-5 p-3 p-lg-5 pt-lg-3 justify-content-center">
             <p class="pre-title fw-bold">Do bazénu? Jedině s námi!</p>
-            <h1 class="pre-title fw-bold" style="display:none">Trenér plavání Praha, Brno, Ostrava, Olomouc, Krnov a Online</h1>
+            <h1 class="pre-title fw-bold" style="display:none">Trenér plavání Praha, Brno, Ostrava, Olomouc, Mladá Boleslav a Online</h1>
             <p class="display-4 fw-bold lh-1 py-3">Plavecký trénink 21. století</p>
             <p class="lead">Moderní pojetí tréninkového procesu, podložené aktuálními trendy a pod dohledem vysokoškolsky vzdělaných profesionálů v daném
                 oboru</p>
@@ -204,7 +204,7 @@
             <br><br>
             Naši trenéři jsou špičkou ve svém oboru, a to díky jejich oddanosti a kvalifikaci. S námi nejde jen o
             trénink, ale také o předávání znalostí našim klientům. Jsme hrdí na to, že můžeme nabídnout naše plavecké
-            služby nejen v <span class="fw-bold">Praze, Brně, Ostravě, Olomouci</span> a <span class="fw-bold">Krnově</span>,
+            služby nejen v <span class="fw-bold">Praze, Brně, Ostravě, Olomouci</span> a <span class="fw-bold">Mladé Boleslavi</span>,
             ale také prostřednictvím <span class="fw-bold">Online coachingu</span>, abychom byli co nejvíce
             dostupní pro vás.
             <br><br>
@@ -257,7 +257,7 @@
         </div>
 
         <div class="col">
-            <button id="olomouc" class="btn-no-style" data-bs-toggle="modal" data-bs-target="#OtherCitiesModal">
+            <button id="olomouc" class="btn-no-style" data-bs-toggle="modal" data-bs-target="#OlomoucModal">
                 <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg" style="background-image: url('static/images/services/olomouc.webp');">
                     <div class="d-flex flex-column h-100 p-5 mt-5 pb-3 text-shadow-1">
                         <h2
@@ -272,11 +272,11 @@
         </div>
 
         <div class="col">
-            <button id="krnov" class="btn-no-style" data-bs-toggle="modal" data-bs-target="#OtherCitiesModal">
-                <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg" style="background-image: url('static/images/services/krnov.webp');">
+            <button id="mlada_boleslav" class="btn-no-style" data-bs-toggle="modal" data-bs-target="#BrnoModal">
+                <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg" style="background-image: url('static/images/services/mlada_boleslav.webp');">
                     <div class="d-flex flex-column h-100 p-5 mt-5 pb-3 text-shadow-1">
                         <h2
-                                class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold text-start shadow-lg">Krnov</h2>
+                                class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold text-start shadow-lg">Mladá Boleslav</h2>
                         <ul class="d-flex list-unstyled mt-auto">
                             <li class="me-auto">
                             </li>
@@ -957,7 +957,7 @@
     </div>
 </div>
 
-<div class="modal fade" id="OtherCitiesModal" tabindex="-1" aria-labelledby="OtherCitiesModal" aria-hidden="true">
+<div class="modal fade" id="OlomoucModal" tabindex="-1" aria-labelledby="OlomoucModal" aria-hidden="true">
     <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content px-2">
             <div class="modal-header text-center">
@@ -1182,7 +1182,7 @@
     Brno - https://pixabay.com/images/id-4902615/
     Ostrava - Adam Popelka (https://www.facebook.com/lovecokamziku/)
     Online - Photo by Pixabay from Pexels
-    Krnov - https://www.infokrnov.cz
+    Mlada Boleslav - By Michaela zemlickova - Own work, CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=114845115
 
   Contact icons:
     https://fontawesome.com/
