--- a/index_en.html
+++ b/index_en.html
@@ -4,15 +4,15 @@
     <!-- Required meta tags -->
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=5.0">
-    <title>Swimming coach Prague, Brno, Ostrava, Olomouc, Krnov and Online | ES</title>
-    <meta content="Swimming training under the supervision of university educated professionals with several years of experience in the field - Prague, Brno, Ostrava, Olomouc, Krnov or Online"
+    <title>Swimming coach Prague, Brno, Ostrava, Olomouc, Mladá Boleslav and Online | ES</title>
+    <meta content="Swimming training under the supervision of university educated professionals with several years of experience in the field - Prague, Brno, Ostrava, Olomouc, Mladá Boleslav or Online"
           name="description">
 
     <meta property="og:locale" content="en_GB">
     <meta property="og:title"
-          content="Swimming coach Prague, Brno, Ostrava, Olomouc, Krnov and Online">
+          content="Swimming coach Prague, Brno, Ostrava, Olomouc, Mladá Boleslav and Online">
     <meta property="og:description"
-          content="Swimming training under the supervision of university educated professionals with several years of experience in the field - Prague, Brno, Ostrava, Olomouc, Krnov or Online">
+          content="Swimming training under the supervision of university educated professionals with several years of experience in the field - Prague, Brno, Ostrava, Olomouc, Mladá Boleslav or Online">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.elementswimming.cz/">
     <meta property="og:site_name" content="Element swimming">
@@ -24,7 +24,7 @@
     <meta name="twitter:site" content="@elementswimming">
     <meta name="twitter:title" content="Element swimming">
     <meta name="twitter:description"
-          content="Swimming training under the supervision of university educated professionals with several years of experience in the field - Prague, Brno, Ostrava, Olomouc, Krnov or Online">
+          content="Swimming training under the supervision of university educated professionals with several years of experience in the field - Prague, Brno, Ostrava, Olomouc, Mladá Boleslav or Online">
     <meta name="twitter:image" content="https://www.elementswimming.cz/static/images/home_photo.webp">
 
     <link rel="icon" href="static/images/icons/logo_icon.png">
@@ -98,7 +98,7 @@
     <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center">
         <div class="col-lg-5 p-3 p-lg-5 pt-lg-3 justify-content-center">
             <p class="pre-title fw-bold">In the pool? Only with us!</p>
-            <h1 class="pre-title fw-bold" style="display:none">Swimming coach Prague, Brno, Ostrava, Olomouc, Krnov and Online</h1>
+            <h1 class="pre-title fw-bold" style="display:none">Swimming coach Prague, Brno, Ostrava, Olomouc, Mladá Boleslav and Online</h1>
             <p class="display-4 fw-bold lh-1 py-3">Swimming training of the 21st century</p>
             <p class="lead">A modern concept of the training process, based on current trends and supervised by university-educated professionals in the field</p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3 pt-5 justify-content-center buttons">
@@ -203,7 +203,7 @@
             Our trainers are top in their field due to their dedication and qualifications.
             With us, it's not just about training, it's also about passing on knowledge to our clients.
             We are proud to be able to offer our swimming services not only in <span class="fw-bold">Prague, Brno, Ostrava, Olomouc</span> and
-            <span class="fw-bold">Krnov</span>, but also through <span class="fw-bold">Online coaching</span>
+            <span class="fw-bold">Mladá Boleslav</span>, but also through <span class="fw-bold">Online coaching</span>
             to make us as accessible as possible to you.
             <br><br>
             We would love to help you achieve your swimming goals. For more information about our services and prices in a specific city,
@@ -255,7 +255,7 @@
         </div>
 
         <div class="col">
-            <button id="olomouc" class="btn-no-style" data-bs-toggle="modal" data-bs-target="#OtherCitiesModal">
+            <button id="olomouc" class="btn-no-style" data-bs-toggle="modal" data-bs-target="#OlomoucModal">
                 <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg" style="background-image: url('static/images/services/olomouc.webp');">
                     <div class="d-flex flex-column h-100 p-5 mt-5 pb-3 text-shadow-1">
                         <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold text-start">Olomouc</h2>
@@ -269,10 +269,10 @@
         </div>
 
         <div class="col">
-            <button id="krnov" class="btn-no-style" data-bs-toggle="modal" data-bs-target="#OtherCitiesModal">
-                <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg" style="background-image: url('static/images/services/krnov.webp');">
+            <button id="mlada_boleslav" class="btn-no-style" data-bs-toggle="modal" data-bs-target="#BrnoModal">
+                <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg" style="background-image: url('static/images/services/mlada_boleslav.webp');">
                     <div class="d-flex flex-column h-100 p-5 mt-5 pb-3 text-shadow-1">
-                        <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold text-start">Krnov</h2>
+                        <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold text-start">Mladá Boleslav</h2>
                         <ul class="d-flex list-unstyled mt-auto">
                             <li class="me-auto">
                             </li>
@@ -811,7 +811,7 @@ If the cancellation of the training on a given day is on our side, the client ha
     </div>
 </div>
 
-<div class="modal fade" id="OtherCitiesModal" tabindex="-1" aria-labelledby="OtherCitiesModal" aria-hidden="true">
+<div class="modal fade" id="OlomoucModal" tabindex="-1" aria-labelledby="OlomoucModal" aria-hidden="true">
     <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content px-2">
             <div class="modal-header text-center">
@@ -1166,7 +1166,7 @@ If the cancellation of the training on a given day is on our side, the client ha
     Brno - https://pixabay.com/images/id-4902615/
     Ostrava - Adam Popelka (https://www.facebook.com/lovecokamziku/)
     Online - Photo by Pixabay from Pexels
-    Krnov - https://www.infokrnov.cz
+    Mladá Boleslav - By Michaela zemlickova - Own work, CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=114845115
 
   Contact icons:
     https://fontawesome.com/
